...
                                            <constraint firstItem="Ge8-Ax-onR" firstAttribute="width" secondItem="ohu-FG-OE2" secondAttribute="width" multiplier="0.485507" id="wG1-Ej-PZI"/>
                                        </constraints>
                                    </view>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fGd-OZ-xTF" userLabel="RockPaperScissors">
                                        <rect key="frame" x="0.0" y="245.33333333333331" width="414" height="215"/>
                                        <subviews>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CUQ-HI-Tn8" userLabel="Rock">
                                                <rect key="frame" x="155.33333333333334" y="-16.333333333333314" width="103.33333333333334" height="107.66666666666667"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hnZ-HE-oky">
                                                        <rect key="frame" x="0.0" y="0.0" width="103.33333333333333" height="107.66666666666667"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Rock"/>
                                                        <state key="normal" title="Button" image="rock"/>
...
                                                    <constraint firstItem="hnZ-HE-oky" firstAttribute="centerY" secondItem="CUQ-HI-Tn8" secondAttribute="centerY" id="Cf1-kf-YiA"/>
                                                    <constraint firstItem="hnZ-HE-oky" firstAttribute="centerX" secondItem="CUQ-HI-Tn8" secondAttribute="centerX" id="Ilf-FX-Jby"/>
                                                    <constraint firstItem="hnZ-HE-oky" firstAttribute="height" secondItem="CUQ-HI-Tn8" secondAttribute="height" id="jER-OW-k0z"/>
                                                    <constraint firstItem="hnZ-HE-oky" firstAttribute="width" secondItem="CUQ-HI-Tn8" secondAttribute="width" id="yY9-87-Y7v"/>
                                                </constraints>
                                            </view>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7mv-fh-ojk" userLabel="Paper">
                                                <rect key="frame" x="5.3333333333333357" y="123.66666666666669" width="103.33333333333331" height="107.66666666666669"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qfd-Z8-NkK">
                                                        <rect key="frame" x="0.0" y="0.0" width="103.33333333333333" height="107.66666666666667"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Paper"/>
                                                        <state key="normal" title="Button" image="paper">
...
                                                    <constraint firstItem="qfd-Z8-NkK" firstAttribute="centerY" secondItem="7mv-fh-ojk" secondAttribute="centerY" id="Ngd-0l-Uej"/>
                                                    <constraint firstItem="qfd-Z8-NkK" firstAttribute="height" secondItem="7mv-fh-ojk" secondAttribute="height" identifier="1" id="lxO-Fj-8Db"/>
                                                    <constraint firstItem="qfd-Z8-NkK" firstAttribute="width" secondItem="7mv-fh-ojk" secondAttribute="width" id="oua-PT-G6j"/>
                                                    <constraint firstItem="qfd-Z8-NkK" firstAttribute="centerX" secondItem="7mv-fh-ojk" secondAttribute="centerX" id="pXP-Ez-cXt"/>
                                                </constraints>
                                            </view>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lyf-z0-Tu8" userLabel="Scissors">
                                                <rect key="frame" x="305.33333333333331" y="123.66666666666669" width="103.33333333333331" height="107.66666666666669"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IyJ-2I-GUR">
                                                        <rect key="frame" x="0.0" y="0.0" width="103.33333333333333" height="107.66666666666667"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Scissors"/>
                                                        <state key="normal" title="Button" image="scissors"/>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x4n-m0-Yrk">
                                                <rect key="frame" x="207" y="36.000000000000057" width="9" height="21"/>
                                                <accessibility key="accessibilityConfiguration" identifier="selectM"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L1d-OI-BG6">
                                                <rect key="frame" x="207" y="71.666666666666686" width="9" height="21"/>
...
